# for-study-robotics

filter/: README.md
filter/filter/: CMakeLists.txt
filter/filter/app/: CMakeLists.txt  main.cpp
filter/filter/include/filter/: AvgFilter.h  LPF.h  Matrix.h  MovAvgFilter.h
filter/filter/lib/: AvgFilter.cpp  CMakeLists.txt  LPF.cpp
filter/filter/lib/filter/: CMakeLists.txt  LPF.cpp  MovAvgFilter.cpp
filter/filter/lib/filter_py/: Kalman.py  MovAvgFIlter.py  test_1d_kalman.py  test_pv_kalman.py
